syntax = "proto3";

package drillbit.protobuf;

message GeneralRegressor {
  bool dense = 1;
  int32 dims = 2;
  bytes weights = 3;
}